page wrap to fix the breadcrumb and lauout

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -5,14 +5,15 @@ header,
   height: 145px;
 
   &__breadcrumb {
-    background-color: lightgrey;
+    // background-color: lightgrey;
     margin: 0 auto;
     padding: 0.5rem 2rem;
     text-align: left;
 
     position: absolute;
     top: 100px;
-    width: 900px;
+    // max-width: 1000px;
+    // width: 80%;
     left: 0;
     right: 0;
 
