--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -51,7 +51,7 @@
       height: 75vh;
       text-align: center;
       position: absolute;
-      top: 5.6rem;
+      top: 0;
       left: 0;
       background-color: #777;
       a {
