--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,7 +9,8 @@
 .page-wrap {
     color: black;
     position: relative;
-    max-width: 1100px;
+    left: 0;
+    max-width: 1000px;
     width: 80%;
     margin: 0 auto;
     line-height: 1.4;
